--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -56,7 +56,7 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Desa Pete <span class="subtext">Kabupaten Tangerang</span></h1>
+                    <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Kecamatan Tigaraksa <span class="subtext">Kabupaten Tangerang</span></h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -86,8 +86,8 @@
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Selamat Datang</h4>
-                                    <h1 class="display-2 text-capitalize text-white mb-4">Website Desa Pete</h1>
-                                    <p class="mb-5 fs-5">Sumber informasi terbaru tentang pemerintahan di Desa Pete 
+                                    <h1 class="display-2 text-capitalize text-white mb-4">Website Kecamatan Tigaraksa</h1>
+                                    <p class="mb-5 fs-5">Sumber informasi terbaru tentang desa-desa yang ada di Kecamatan Tigaraksa 
                                     </p>
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
                         <h5 class="section-about-title pe-3">Sejarah</h5>
-                        <h1 class="mb-4" class="text-primary">Desa Pete</h1>
+                        <h1 class="mb-4" class="text-primary">Kecamatan Tigaraksa</h1>
                         <p class="mb-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ducimus cum ullam quod aspernatur aut iusto aliquam veritatis, quae mollitia tempora explicabo similique modi impedit odit saepe debitis. Nostrum, eos.</p>                        
                     </div>
                 </div>
@@ -126,7 +126,7 @@
        <!-- Highlight Start -->
        <div class="mx-auto text-center mb-5" style="max-width: 900px;">
         <h5 class="section-title px-3">Highlight</h5>
-        <h1 class="mb-0">Berita Terbaru Desa Pete</h1>
+        <h1 class="mb-0">Berita Terbaru Kecamatan Tigaraksa</h1>
     </div>
        <div class="containerBerita">
         <div class="cardBerita">
@@ -180,27 +180,27 @@
                         </li>
                         <li class="nav-item">
                             <a class="d-flex py-2 mx-3 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-2">
-                                <span class="text-dark" style="width: 150px;">Rapat Koordinasi</span>
+                                <span class="text-dark" style="width: 150px;">Kegiatan A</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-3">
-                                <span class="text-dark" style="width: 150px;">Posyandu</span>
+                                <span class="text-dark" style="width: 150px;">Kegiatan B</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-4">
-                                <span class="text-dark" style="width: 150px;">Ulang Tahun Desa</span>
+                                <span class="text-dark" style="width: 150px;">Kegiatan C</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-5">
-                                <span class="text-dark" style="width: 150px;">Kesehatan</span>
+                                <span class="text-dark" style="width: 150px;">Kegiatan D</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-6">
-                                <span class="text-dark" style="width: 150px;">Lomba</span>
+                                <span class="text-dark" style="width: 150px;">Kegiatan E</span>
                             </a>
                         </li>
                     </ul>
@@ -216,7 +216,7 @@
                                                 <img class="img-fluid rounded w-100" src="img/destination-1.jpg" alt="Rapat Koordinasi" data-bs-toggle="modal">
                                                 <div class="destination-overlay p-4 text-start">
                                                     <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">6 Photos</a>                                                       
-                                                    <h4 class="text-white mb-2 mt-3">Rapat Koordinasi</h4>
+                                                    <h4 class="text-white mb-2 mt-3">Kegiatan A</h4>
                                                     <a href="#galleryModal" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                                 </a>
                                                 </div>
@@ -228,7 +228,7 @@
                                             <div class="modal-dialog modal-lg">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h5 class="modal-title" id="galleryModalLabel">Galeri Rapat Koordinasi</h5>
+                                                        <h5 class="modal-title" id="galleryModalLabel">Galeri Kegiatan A</h5>
                                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                     </div>
                                                     <div class="modal-body">
@@ -263,7 +263,7 @@
                                                 <img class="img-fluid rounded w-100" src="img/destination-2.jpg" alt="Posyandu" data-bs-toggle="modal">
                                                 <div class="destination-overlay p-4 text-start">
                                                     <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">2 Photos</a>
-                                                    <h4 class="text-white mb-2 mt-3">Posyandu</h4>
+                                                    <h4 class="text-white mb-2 mt-3">Kegiatan B</h4>
                                                     <a href="#galleryModal2" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal2">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                                 </a>
                                                 </div>
@@ -274,7 +274,7 @@
                                             <div class="modal-dialog modal-lg">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h5 class="modal-title" id="galleryModalLabel">Galeri Posyandu</h5>
+                                                        <h5 class="modal-title" id="galleryModalLabel">Galeri Kegiatan B</h5>
                                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                     </div>
                                                     <div class="modal-body">
@@ -297,7 +297,7 @@
                                                 <img class="img-fluid rounded w-100" src="img/destination-3.jpg" alt="Ulang Tahun Desa" data-bs-toggle="modal">
                                                 <div class="destination-overlay p-4 text-start">
                                                     <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">4 Photos</a>
-                                                    <h4 class="text-white mb-2 mt-3">Ulang Tahun Desa</h4>
+                                                    <h4 class="text-white mb-2 mt-3">Kegiatan C</h4>
                                                     <a href="#galleryModal3" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal3">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                                 </a>
                                                 </div>
@@ -308,7 +308,7 @@
                                             <div class="modal-dialog modal-lg">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h5 class="modal-title" id="galleryModalLabel">Galeri Ulang Tahun Desa</h5>
+                                                        <h5 class="modal-title" id="galleryModalLabel">Galeri Kegiatan C</h5>
                                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                     </div>
                                                     <div class="modal-body">
@@ -337,7 +337,7 @@
                                                 <img class="img-fluid rounded w-100" src="img/destination-8.jpg" alt="Kesehatan" data-bs-toggle="modal">
                                                 <div class="destination-overlay p-4 text-start">
                                                     <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">6 Photos</a>
-                                                    <h4 class="text-white mb-2 mt-3">Kesehatan</h4>
+                                                    <h4 class="text-white mb-2 mt-3">Kegiatan D</h4>
                                                     <a href="#galleryModal4" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal4">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                                 </a>
                                                 </div>
@@ -350,7 +350,7 @@
                                     <div class="modal-dialog modal-lg">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="galleryModalLabel">Galeri Kesehatan</h5>
+                                                <h5 class="modal-title" id="galleryModalLabel">Galeri Kegiatan D</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
@@ -385,7 +385,7 @@
                                         <img class="img-fluid rounded w-100 h-100" src="img/destination-9.jpg" style="object-fit: cover; min-height: 300px;" alt="lomba" data-bs-toggle="modal">
                                         <div class="destination-overlay p-4 text-start">
                                             <a class="btn btn-primary text-white rounded-pill border py-2 px-3" style="pointer-events: none;">6 Photos</a>
-                                            <h4 class="text-white mb-2 mt-3">Lomba</h4>
+                                            <h4 class="text-white mb-2 mt-3">Kegiatan E</h4>
                                             <a href="#galleryModal5" class="btn-hover text-white"  data-bs-toggle="modal" data-bs-target="#galleryModal5">Lihat Semua Foto <i class="fa fa-arrow-right ms-2"></i>
                                             </a>
                                         </div>
@@ -396,7 +396,7 @@
                                     <div class="modal-dialog modal-lg">
                                         <div class="modal-content">
                                             <div class="modal-header">
-                                                <h5 class="modal-title" id="galleryModalLabel">Galeri Lomba Desa</h5>
+                                                <h5 class="modal-title" id="galleryModalLabel">Galeri Kegiatan E</h5>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
