--- a/FrontEnd/maps.html
+++ b/FrontEnd/maps.html
@@ -63,7 +63,7 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Desa Pete <span class="subtext">Kabupaten Tangerang</span></h1>
+                    <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Kecamatan Tigaraksa <span class="subtext">Kabupaten Tangerang</span></h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -92,17 +92,17 @@
         <div class="container-fluid packages py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                    <h5 class="section-title px-3">Peta Desa</h5>
-                    <h1 class="mb-0">Menampilkan Peta Desa Dengan Interest Point Desa Pete </h1>
+                    <h5 class="section-title px-3">Peta Kecamatan</h5>
+                    <h1 class="mb-0">Menampilkan Peta Kecamatan Tigaraksa Dengan Penandaan Lokasi Setiap Desa</h1>
                 </div>
                
                 
-                <select id="categoryFilter">
+                <!-- <select id="categoryFilter">
                     <option value="all">Semua</option>
                     <option value="wisata">Wisata Desa</option>
                     <option value="makanan">Makanan</option>
                     <option value="penginapan">Penginapan</option>
-                </select>
+                </select> -->
                 <div id="map"></div>
                 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
                 <br>
