--- a/FrontEnd/about.html
+++ b/FrontEnd/about.html
@@ -87,6 +87,8 @@
                                 <a href="Pete.html" class="dropdown-item">Desa Pete</a>
                                 <a href="Sodong.html" class="dropdown-item">Desa Sodong</a>
                                 <a href="Tapos.html" class="dropdown-item">Desa Tapos</a>
+                                <a href="KaduAgung.html" class="dropdown-item">Kelurahan Kadu Agung</a>
+                                <a href="Tigaraksa.html" class="dropdown-item">Kelurahan Tigaraksa</a>
                             </div>
                         </div>
                     </div>
