--- a/FrontEnd/maps.html
+++ b/FrontEnd/maps.html
@@ -74,7 +74,7 @@
                         <a href="index.html" class="nav-item nav-link">Home</a>
                         <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
                         <a href="infografis.html" class="nav-item nav-link">Infografis</a>
-                        <a href="maps.html" class="nav-item nav-link">Maps</a>
+                        <a href="maps.html" class="nav-item nav-link active">Maps</a>
                         <a href="berita.html" class="nav-item nav-link">Berita</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Profile Desa</a>
@@ -115,12 +115,11 @@
                 </div>
                
                 
-                <!-- <select id="categoryFilter">
+                <select id="categoryFilter">
                     <option value="all">Semua</option>
-                    <option value="wisata">Wisata Desa</option>
-                    <option value="makanan">Makanan</option>
-                    <option value="penginapan">Penginapan</option>
-                </select> -->
+                    <option value="Desa">Desa</option>
+                    <option value="Kelurahan">Kelurahan</option>
+                </select>
                 <div id="map"></div>
                 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
                 <br>
