--- a/FrontEnd/about.html
+++ b/FrontEnd/about.html
@@ -114,13 +114,27 @@
                             <img src="img/tentang-kami.jpg" class="img-fluid w-100 h-100" alt="">
                         </div>
                     </div>
-                    <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/about-img-1.png);">
-                        <h5 class="section-about-title pe-3">Visi dan Misi</h5>
+                    <div class="col-lg-7" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8))">
+                        <h5 class="section-about-title pe-3">Visi dan Misi Kecamatan Tigakarsa</h5>
                         <h1 class="mb-4"> Visi </h1>
-                        <p class="mb-4">Pete adalah sebuah desa, atau wilayah administratif tingkat IV setingkat desa di Kecamatan Tigaraksa, Kabupaten Tangerang, Provinsi Banten</p>
+                        <p class="mb-4">Visi Kecamatan Tigaraksa bertujuan memberikan arah strategis bagi pembangunan daerah yang berkelanjutan sebagai berikut:</p>
+                        <p><strong>"Terwujudnya kehidupan masyarakat Kecamatan Tigaraksa yang cerdas, religius, dan berwawasan kemandirian"</strong></p>
+                        <ul>
+                            <li><strong>Cerdas:</strong> Masyarakat memiliki wawasan, keterampilan, serta pendidikan yang mendukung kualitas hidup</li>
+                            <li><strong>Religius:</strong> Nilai-nilai agama menjadi landasan dalam kehidupan masyarakat dan kebijakan pemerintah</li>
+                            <li><strong>Berwawasan Kemandirian:</strong> Masyarakat mampu berpikir kreatif, inovatif, serta mandiri dalam menghadapi tantangan</li>
+                        </ul>
+                        <p class="mb-4">Visi ini menjadi pedoman dalam menyusun program prioritas dan kegiatan pembangunan di Kecamatan Tigaraksa </p>
                         <h1 class="mb-4"> Misi </h1>
-                        <p class="mb-4">Secara geografis, Desa Pete berbatasan dengan Desa Pematang di sebelah utara, Desa Pasir Nangka di sebelah timur, Desa Jengjing dan Desa Munjul di sebelah selatan, serta Desa Tegal Sari di sebelah barat. Desa ini terletak sekitar 2,5 km sebelah timur dari ibu kota Kecamatan Tigaraksa dan 2 km dari ibu kota Kabupaten Tangerang</p>
-                        
+                        <ul>
+                            <li>Meningkatkan fasilitas pendidikan dan layanan kesehatan masyarakat</li>
+                            <li>Mendorong pertumbuhan ekonomi berbasis UMKM sesuai potensi wilayah</li>
+                            <li>Mewujudkan kesejahteraan sosial dengan nilai-nilai religius dalam pemerintahan</li>
+                            <li>Mempercepat pembangunan infrastruktur jalan, jembatan, dan fasilitas umum</li>
+                            <li>Meningkatkan ketertiban dan keamanan melalui koordinasi yang efektif</li>
+                            <li>Mengembangkan kapasitas aparatur kecamatan, desa, dan kelurahan dalam pelayanan publik</li>
+                        </ul>
+                        <p class="mb-4">Misi ini menjadi pedoman utama dalam merancang kebijakan dan program pembangunan di Kecamatan Tigaraksa</p>            
                         <!-- <a class="btn btn-primary rounded-pill py-3 px-5 mt-2" href="">Detail</a> -->
                     </div>
                 </div>
@@ -130,8 +144,8 @@
 
         <!-- Struktu organisasi -->
         <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-            <h5 class="section-title px-3"> Bagan Desa </h5>
-            <h1 class="mb-0"> Struktur Organisasi Pemerintahan Desa </h1>
+            <h5 class="section-title px-3"> Bagan Organisasi</h5>
+            <h1 class="mb-0"> Struktur Pemerintahan Kecamatan </h1>
         </div>
         <!--  Struktur organisasi end-->
 
@@ -139,8 +153,8 @@
          <div class="container-fluid guide py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                    <h5 class="section-title px-3"> Daftar </h5>
-                    <h1 class="mb-0"> Perangkat Desa </h1>
+                    <h5 class="section-title px-3"> Perangkat Kecamatan </h5>
+                    <h1 class="mb-0"> Daftar nama dan Jabatan </h1>
                 </div>
                 <br>
                 <div class="row g-4">
