--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -64,7 +64,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
+                        <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
                         <a href="infografis.html" class="nav-item nav-link">Infografis</a>
                         <a href="maps.html" class="nav-item nav-link">Maps</a>
