--- a/FrontEnd/BantarPanjang.html
+++ b/FrontEnd/BantarPanjang.html
@@ -118,48 +118,42 @@
         class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
         <a href="" class="navbar-brand p-0">
           <a href="" class="navbar-brand p-0">
-            <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Desa Bantar Panjang <span class="subtext">Kecamatan Tigaraksa</span></h1>
+            <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Bantar Panjang <span class="subtext">Kecamatan Tigaraksa</span></h1>
             <!-- <img src="img/logo.png" alt="Logo"> -->
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarCollapse"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
           <span class="fa fa-bars"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto py-0">
-            <a href="index.html" class="nav-item nav-link">Home</a>
-            <a href="about.html" class="nav-item nav-link">About</a>
-            <a href="services.html" class="nav-item nav-link">Services</a>
-            <a href="packages.html" class="nav-item nav-link">Packages</a>
-            <a href="blog.html" class="nav-item nav-link">Blog</a>
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle active"
-                data-bs-toggle="dropdown"
-                >Pages</a>
-              <div class="dropdown-menu m-0">
-                <a href="destination.html" class="dropdown-item">Destination</a>
-                <a href="tour.html" class="dropdown-item">Explore Tour</a>
-                <a href="booking.html" class="dropdown-item">Travel Booking</a>
-                <a href="gallery.html" class="dropdown-item">Our Gallery</a>
-                <a href="guides.html" class="dropdown-item">Travel Guides</a>
-                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                <a href="404.html" class="dropdown-item active">404 Page</a>
+              <a href="index.html" class="nav-item nav-link">Home</a>
+              <a href="about.html" class="nav-item nav-link">Tentang Kami</a>
+              <a href="infografis.html" class="nav-item nav-link">Infografis</a>
+              <a href="maps.html" class="nav-item nav-link">Maps</a>
+              <a href="berita.html" class="nav-item nav-link">Berita</a>
+              <div class="nav-item dropdown">
+                  <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Profile Desa</a>
+                  <div class="dropdown-menu m-0">
+                      <a href="BantarPanjang.html" class="dropdown-item">Desa Bantar Panjang </a>
+                      <a href="Cileles.html" class="dropdown-item">Desa Cileles</a>
+                      <a href="Cisereh.html" class="dropdown-item">Desa Cisereh</a>
+                      <a href="KaduAgung.html" class="dropdown-item">Desa Kadu Agung</a>
+                      <a href="MargaSari.html" class="dropdown-item">Desa Marga Sari</a>
+                      <a href="MataGara.html" class="dropdown-item">Desa Mata Gara</a>
+                      <a href="PasirBolang.html" class="dropdown-item">Desa Pasir Bolang</a>
+                      <a href="PasirNangka.html" class="dropdown-item">Desa Pasir Nangka</a>
+                      <a href="Pematang.html" class="dropdown-item">Desa Pematang</a>
+                      <a href="Pete.html" class="dropdown-item">Desa Pete</a>
+                      <a href="Sodong.html" class="dropdown-item">Desa Sodong</a>
+                      <a href="Tapos.html" class="dropdown-item">Desa Tapos</a>
+                      <a href="KaduAgung.html" class="dropdown-item">Kelurahan Kadu Agung</a>
+                      <a href="Tigaraksa.html" class="dropdown-item">Kelurahan Tigaraksa</a>
+                  </div>
               </div>
-            </div>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
           </div>
-          <a href="" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4"
-            >Book Now</a
-          >
-        </div>
-      </nav>
-    </div>
+      </div>
+  </nav>
+</div>
     <!-- Navbar & Hero End -->
 
     <!-- Header Start -->
