--- a/FrontEnd/BantarPanjang.html
+++ b/FrontEnd/BantarPanjang.html
@@ -77,6 +77,50 @@
         cursor: pointer;
         margin-left: 8px;
     } */
+  
+      /* CARD WISATA */
+        .containerWisata {
+            max-width: 1200px;
+            margin: auto;
+            text-align: center;
+        }
+
+        .gridWisata {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+            gap: 20px;
+        }
+
+        .cardW {
+            position: relative;
+            overflow: hidden;
+            border-radius: 10px;
+        }
+
+        .cardW img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            display: block;
+            transition: transform 0.3s ease;
+        }
+
+        .cardW:hover img {
+            transform: scale(1.05);
+        }
+
+        .cardW .info {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            padding: 10px;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
+            text-align: left;
+        }
     </style>
   </head>
 
@@ -206,8 +250,43 @@
     </div>
     <!-- Profil end -->
 
+    <!-- Wisata start -->
+    <div class="mx-auto text-center mb-5" style="max-width: 900px; margin-top: 50px;">
+      <h5 class="section-title px-3"> Wisata </h5>
+      <h1 class="mb-0">Jelajahi Wisata Lokal</h1>
+    </div>
+    <div class="containerWisata">
+      <div class="gridWisata">
+          <div class="cardW">
+              <img src="img/pantai.jpg" alt="Pantai">
+              <div class="info">Pantai Indah</div>
+          </div>
+          <div class="cardW">
+              <img src="img/Gunung.jpg" alt="Gunung">
+              <div class="info">Gunung Sejuk</div>
+          </div>
+          <div class="cardW">
+              <img src="img/Hutan.jpg" alt="Hutan">
+              <div class="info">Hutan Hijau</div>
+          </div>
+          <div class="cardW">
+              <img src="img/Kota.jpg" alt="Kota">
+              <div class="info">Wisata Kota</div>
+          </div>
+          <div class="cardW">
+              <img src="img/candi.jpg" alt="Candi">
+              <div class="info">Candi Bersejarah</div>
+          </div>
+          <div class="cardW">
+              <img src="img/airTerjun.jpg" alt="Air Terjun">
+              <div class="info">Air Terjun Cantik</div>
+          </div>
+      </div>
+  </div>
+
+
     <!-- PETA DESA -->
-    <div class="container-fluid packages py-5">
+    <!-- <div class="container-fluid packages py-5">
       <div class="container py-5">
           <div class="mx-auto text-center mb-5" style="max-width: 900px;">
               <h5 class="section-title px-3">Peta Desa</h5>
@@ -223,7 +302,7 @@
           
           <br>
       </div>
-  </div>
+  </div> -->
    
     <!-- PETA END -->
 
