--- a/FrontEnd/BantarPanjang.html
+++ b/FrontEnd/BantarPanjang.html
@@ -333,31 +333,31 @@
     <h5 class="section-title px-3"> UMKM </h5>
     <h1 class="mb-0">Produk Khas Daerah</h1>
   </div>
-  <div class="containerUMKM">
+  <div class="containerUMKM" style="margin-bottom: 100px;"> 
     <div class="gridUMKM">
         <div class="cardU">
-            <img src="img/pantai.jpg" alt="Pantai">
-            <div class="info">Pantai Indah</div>
+            <img src="img/jajananPasar.jpg" alt="jajananPasar">
+            <div class="info">Jajanan Pasar</div>
         </div>
         <div class="cardU">
-            <img src="img/Gunung.jpg" alt="Gunung">
-            <div class="info">Gunung Sejuk</div>
+            <img src="img/kerajinanRotan.jpg" alt="kerajinanRotan">
+            <div class="info">Kerajinan Tangan</div>
         </div>
         <div class="cardU">
-            <img src="img/Hutan.jpg" alt="Hutan">
-            <div class="info">Hutan Hijau</div>
+            <img src="img/kueTradisional.jpg" alt="kueTradisional">
+            <div class="info">Kue Tradisional</div>
         </div>
         <div class="cardU">
-            <img src="img/Kota.jpg" alt="Kota">
-            <div class="info">Wisata Kota</div>
+            <img src="img/olehOleh.jpg" alt="olehOleh">
+            <div class="info">Oleh-oleh Khas Daerah</div>
         </div>
         <div class="cardU">
-            <img src="img/candi.jpg" alt="Candi">
-            <div class="info">Candi Bersejarah</div>
+            <img src="img/anyaman.jpg" alt="anyaman">
+            <div class="info">Anyaman</div>
         </div>
         <div class="cardU">
-            <img src="img/airTerjun.jpg" alt="Air Terjun">
-            <div class="info">Air Terjun Cantik</div>
+            <img src="img/gorengan.jpg" alt="gorengan">
+            <div class="info">Gorengan</div>
         </div>
     </div>
 </div>
@@ -455,92 +455,9 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-6 col-xl-3">
-            <div class="footer-item d-flex flex-column">
-              <h4 class="mb-4 text-white">Company</h4>
-              <a href=""><i class="fas fa-angle-right me-2"></i> About</a>
-              <a href=""><i class="fas fa-angle-right me-2"></i> Careers</a>
-              <a href=""><i class="fas fa-angle-right me-2"></i> Blog</a>
-              <a href=""><i class="fas fa-angle-right me-2"></i> Press</a>
-              <a href=""><i class="fas fa-angle-right me-2"></i> Gift Cards</a>
-              <a href=""><i class="fas fa-angle-right me-2"></i> Magazine</a>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-6 col-xl-3">
-            <div class="footer-item d-flex flex-column">
-              <h4 class="mb-4 text-white">Support</h4>
-              <a href=""><i class="fas fa-angle-right me-2"></i> Contact</a>
-              <a href=""
-                ><i class="fas fa-angle-right me-2"></i> Legal Notice</a
-              >
-              <a href=""
-                ><i class="fas fa-angle-right me-2"></i> Privacy Policy</a
-              >
-              <a href=""
-                ><i class="fas fa-angle-right me-2"></i> Terms and Conditions</a
-              >
-              <a href=""><i class="fas fa-angle-right me-2"></i> Sitemap</a>
-              <a href=""
-                ><i class="fas fa-angle-right me-2"></i> Cookie policy</a
-              >
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-6 col-xl-3">
-            <div class="footer-item">
-              <div class="row gy-3 gx-2 mb-4">
-                <div class="col-xl-6">
-                  <form>
-                    <div class="form-floating">
-                      <select class="form-select bg-dark border" id="select1">
-                        <option value="1">Arabic</option>
-                        <option value="2">German</option>
-                        <option value="3">Greek</option>
-                        <option value="3">New York</option>
-                      </select>
-                      <label for="select1">English</label>
-                    </div>
-                  </form>
-                </div>
-                <div class="col-xl-6">
-                  <form>
-                    <div class="form-floating">
-                      <select class="form-select bg-dark border" id="select1">
-                        <option value="1">USD</option>
-                        <option value="2">EUR</option>
-                        <option value="3">INR</option>
-                        <option value="3">GBP</option>
-                      </select>
-                      <label for="select1">$</label>
-                    </div>
-                  </form>
-                </div>
-              </div>
-              <h4 class="text-white mb-3">Payments</h4>
-              <div class="footer-bank-card">
-                <a href="#" class="text-white me-2"
-                  ><i class="fab fa-cc-amex fa-2x"></i
-                ></a>
-                <a href="#" class="text-white me-2"
-                  ><i class="fab fa-cc-visa fa-2x"></i
-                ></a>
-                <a href="#" class="text-white me-2"
-                  ><i class="fas fa-credit-card fa-2x"></i
-                ></a>
-                <a href="#" class="text-white me-2"
-                  ><i class="fab fa-cc-mastercard fa-2x"></i
-                ></a>
-                <a href="#" class="text-white me-2"
-                  ><i class="fab fa-cc-paypal fa-2x"></i
-                ></a>
-                <a href="#" class="text-white"
-                  ><i class="fab fa-cc-discover fa-2x"></i
-                ></a>
-              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
     <!-- Footer End -->
 
     <!-- Copyright Start -->
