--- a/FrontEnd/berita.html
+++ b/FrontEnd/berita.html
@@ -132,7 +132,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
+                                <a href="detailberita.html" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
+                                <a href="detailberita.html" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
+                                <a href="detailberita.html" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
+                                <a href="detailberita.html" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
+                                <a href="detailberita.html" class="btn btn-primary rounded-pill py-2 px-4">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -247,7 +247,7 @@
                                 <p class="mb-3">Posted By: Royal Hamblin </p>
                                 <a href="#" class="h4">Adventures Trip</a>
                                 <p class="my-3">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam eos</p>
-                                <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Selengkapnya</a>
+                                <a href="detailberita.html" class="btn btn-primary rounded-pill py-2 px-4">Selengkapnya</a>
                             </div>
                         </div>
                     </div>
