--- a/FrontEnd/detailberita.html
+++ b/FrontEnd/detailberita.html
@@ -86,6 +86,19 @@
     </div>
     <!-- Spinner End -->
 
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-primary px-5 d-none d-lg-block">
+      <div class="row gx-0 justify-content-end"> <!-- Tambahkan justify-content-end -->
+          <div class="col-lg-4 text-end"> <!-- Gunakan text-end agar teks sejajar ke kanan -->
+              <div class="d-inline-flex align-items-center" style="height: 45px;">
+                  <a href="#"><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>Login</small></a>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  <!-- Topbar End -->
+
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
