--- a/FrontEnd/BantarPanjang.html
+++ b/FrontEnd/BantarPanjang.html
@@ -302,7 +302,8 @@
     <div class="containerWisata">
       <div class="gridWisata">
           <div class="cardW">
-              <img src="img/pantai.jpg" alt="Pantai">
+            <a href="wisata.html">
+              <img src="img/pantai.jpg" alt="Pantai"></a>
               <div class="info">Pantai Indah</div>
           </div>
           <div class="cardW">
