--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -168,7 +168,7 @@
                                 <i class="bi bi-person"></i> Administrator
                             </p>
                             <p class="card-text">Pemerintah desa melaksanakan studi komparatif terkait pengelolaan sampah daur ulang...</p>
-                            <a href="#" class="btn btn-primary">Selengkapnya</a>
+                            <a href="detailberita.html" class="btn btn-primary">Selengkapnya</a>
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                                 <i class="bi bi-person"></i> Administrator
                             </p>
                             <p class="card-text">Kegiatan vaksinasi rabies serentak di desa dilakukan untuk mencegah penyebaran virus...</p>
-                            <a href="#" class="btn btn-primary">Selengkapnya</a>
+                            <a href="detailberita.html" class="btn btn-primary">Selengkapnya</a>
                         </div>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                                 <i class="bi bi-person"></i> Administrator
                             </p>
                             <p class="card-text">Kegiatan pemberantasan sarang nyamuk (PSN) dilakukan untuk mengurangi risiko penyakit...</p>
-                            <a href="#" class="btn btn-primary">Selengkapnya</a>
+                            <a href="detailberita.html" class="btn btn-primary">Selengkapnya</a>
                         </div>
                     </div>
                 </div>
